add: functions in welcome page

--- a/package.json
+++ b/package.json
@@ -18,18 +18,23 @@
   },
   "homepage": ".",
   "dependencies": {
+    "@ant-design/icons": "^5.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.0",
+    "dayjs": "^1.11.9",
     "electron-store": "^8.1.0",
+    "lodash": "^4.17.21",
+    "pinyin": "^3.0.0-alpha.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "seedrandom": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set BROWSER=none && react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
