--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "pinyin": "^3.0.0-alpha.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "seedrandom": "^3.0.5",
     "web-vitals": "^2.1.4"
