--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.9",
     "electron-store": "^8.1.0",
     "lodash": "^4.17.21",
+    "path-browserify": "^1.0.1",
     "pinyin": "^3.0.0-alpha.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
